<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- th_ng_tin_gi_o_tr_nh strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="t_n_gi_o_tr_nh_string">Tn gio trnh</string>
    <string name="ch__bi_n_string">Ch bin</string>
    <string name="gi_o_vi_n_tham_gia_string">Gio vin tham gia</string>
    <string name="giai__o_n_th_c_hi_n_string">Giai on thc hin</string>
    <string name="nguy_n_v_n_a_string">Nguyn Vn A</string>
    <string name="nguy_n_th__b_string">Nguyn Th B</string>
    <string name="_2022___2023_string">2022 - 2023</string>
    <string name="t_n_gi_o_tr_nh_ek1_string">Tn gio trnh</string>
    <string name="ch__bi_n_ek1_string">Ch bin</string>
    <string name="gi_o_vi_n_tham_gia_ek1_string">Giao vin tham gia</string>
    <string name="giai__o_n_th_c_hi_n_ek1_string">Giai on thc hin</string>
    <string name="nguy_n_v_n_a_ek1_string">Nguyn Vn A</string>
    <string name="nguy_n_th__b_ek1_string">Nguyn Th B</string>
    <string name="_2022___2023_ek1_string">2022 - 2023</string>
    <string name="t_n_gi_o_tr_nh_ek2_string">Tn gio trnh</string>
    <string name="ch__bi_n_ek2_string">Ch bin</string>
    <string name="gi_o_vi_n_tham_gia_ek2_string">Gio vin tham gia</string>
    <string name="giai__o_n_th_c_hi_n_ek2_string">Giai on thc hin</string>
    <string name="nguy_n_v_n_a_ek2_string">Nguyn Vn A</string>
    <string name="nguy_n_th__b_ek2_string">Nguyn Th B</string>
    <string name="_2022___2023_ek2_string">2022 - 2023</string>
    <string name="th_ng_tin_gi_o_tr_nh_string">Thng tin gio trnh</string>
    <string name="ch_c_n_ng">Chức năng</string>
    <string name="qu_n_l_bi_n_so_n_gi_o_tr_nh_haui">Quản lý biên soạn giáo trình HaUI</string>
    <string name="qu_n_l_xu_t_b_n_v_bi_n_so_n">Quản lý xuất bản và biên soạn</string>
    <string name="th_ng_tin_gi_o_tr_nh">Thông tin giáo trình</string>
    <string name="dich_v_ng_k_gi_o_tr_nh">Dich vụ đăng ký giáo trình</string>
    <string name="ch_bi_n">Chủ biên</string>
    <string name="giai_o_n_th_c_hi_n">Giai đoạn thực hiện</string>
    <string name="nguy_n_v_n_a">Nguyễn Văn A</string>
    <string name="_2022_2023">19/06/2023</string>
    <string name="gi_o_vi_n_tham_gia">Giáo viên tham gia</string>
    <string name="ng_k_gi_o_tr_nh">Đăng ký giáo trình</string>
    <string name="bi_n_so_n">Biên soạn</string>
    <string name="xu_t_b_n">Xuất bản</string>
    <string name="ho_n_th_nh">Hoàn thành</string>
    <string name="duy_t">Đã duyệt</string>
    <string name="ch_x_c_nh_n">Chờ xác nhận</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dangkygiaotrinh">Đăng ký biên soạn</string>
    <string name="quy_tr_nh_x_c_nh_n">Quy trình xác nhận</string>
    <string name="t_n_gi_o_tr_nh">Tên giáo trình</string>
    <string name="s_t_n_ch">Số tín chỉ</string>
    <string name="it6029">IT6029</string>
    <string name="c_c_t_c_gi">Các tác giả</string>
    <string name="name">Name</string>
    <string name="g_i">Gửi</string>
    <string name="qu_n_l_ti_n">Quản lý tiến độ</string>
    <string name="nghi_m_thu_gi_o_tr_nh">Nghiệm thu giáo trình</string>
    <string name="t_n_c_ng_vi_c"><![CDATA[<Tên công việc>]]></string>
    <string name="n_i_dung">Nội dung</string>
    <string name="viet_bia_sach">viết bìa sách</string>
    <string name="tr_ng_th_i">Trạng thái</string>
    <string name="th_i_gian_ho_n_th_nh">Thời gian hoàn thành</string>
    <string name="danh_s_ch_bi_n_so_n">Danh sách biên soạn</string>
    <string name="huy_bo">Hủy bỏ</string>
    <string name="muclon1">Mục đích, yêu cầu của giáo trình</string>
    <string name="_20">20</string>
    <string name="dieu3_4">Trích dẫn tài liệu tham khảo phải có nguồn gốc và chú thích rõ ràng</string>
    <string name="_5">5</string>
    <string name="dieu2_2">Tính mới của bộ giáo trình: kiến thức cập nhật được tiêu chuẩn, tiến bộ khoa học công nghệ mới không?.</string>
    <string name="ti_u_chu_n_anh_gia">Tiêu chuẩn đanh gia</string>
    <string name="dieu1_1">Sự phù hợp của giáo trình với trình độ đào tạo</string>
    <string name="_10">10</string>
    <string name="dieu1_2">Sự phù hợp của giáo trình với mục tiêu, chương trình đào tạo và đặc biệt với đề cương chi tiết học phần</string>
    <string name="muclon2">Nội dung và lượng kiến thức giáo trình cung cấp</string>
    <string name="_45">45</string>
    <string name="dieu2_1">Nội dung kiến thức tron giáo trình đảm bảo khoa học, hợp lý, cân đối giữa lý luận và thực tiễn</string>
    <string name="dieu3_1">Giáo trình đã đầy đủ các nội dung theo quy định chưa?</string>
    <string name="_30">30</string>
    <string name="dieu3_2">Cấu trúc các chương, mục có hợp lý không?</string>
    <string name="dieu3_3">Thuật ngữ, văn phong, trình bày, hình ảnh, biểu đồ,...</string>
    <string name="dieu2_3">Mục tiêu, kết luận chương, chất lượng câu hỏi, bài tập,...</string>
    <string name="_35">35</string>
    <string name="muclon3">Hình thức và cấu trúc giáo trình</string>
    <string name="t_ng_i_m">Tổng điểm</string>
    <string name="ki_n_kh_c">Ý kiến khác</string>
    <string name="k_t_lu_n">Kết luận</string>
    <string name="ten_cong_viec">ten cong viec</string>
    <string name="noi_dung">Noi dung</string>
</resources>