<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E9E9"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/qlybiensoan"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:background="@drawable/shape_no_boder"
        android:text="@string/qu_n_l_bi_n_so_n_gi_o_tr_nh_haui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/ch_c_n_ng"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qlybiensoan" />

    <TextView
        android:id="@+id/btn_service"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rectangle_3_ek1_shape"
        android:gravity="center"
        android:text="@string/dich_v_ng_k_gi_o_tr_nh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/btn_info"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rectangle_3_ek1_shape"
        android:gravity="center"
        android:text="@string/th_ng_tin_gi_o_tr_nh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_service" />

    <TextView
        android:id="@+id/btn_process"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rectangle_3_ek1_shape"
        android:gravity="center"
        android:text="@string/quy_tr_nh_x_c_nh_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_info" />

    <TextView
        android:id="@+id/btn_acceptance"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rectangle_3_ek1_shape"
        android:gravity="center"
        android:text="@string/nghi_m_thu_gi_o_tr_nh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_process" />
</androidx.constraintlayout.widget.ConstraintLayout>