<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E9E9"
    tools:context=".Register_Screen.Register">

    <TextView
        android:id="@+id/qlybiensoan"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_no_boder"
        android:gravity="center"
        android:text="@string/ng_k_gi_o_tr_nh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/register_btn_arrowback"
        android:layout_width="43dp"
        android:layout_height="46dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/qlybiensoan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/register_btn_biensoan"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_3_ek1_shape"
        android:gravity="center"
        android:text="@string/bi_n_so_n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qlybiensoan" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="415dp"
        android:layout_height="586dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/rectangle_3_ek1_shape"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn_biensoan">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/register_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical"></androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

    <TextView
        android:id="@+id/viewvui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/danh_s_ch_bi_n_so_n"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>